--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
 		"php": ">=5.4.0",
 		"webiny/class-loader": "dev-master",
 		"webiny/config": "dev-master",
+		"webiny/event-manager": "dev-master",
 		"webiny/std-lib": "dev-master",
 		"webiny/storage": "dev-master",
 		"imagine/imagine": "dev-master"
