--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
 		"webiny/event-manager": "dev-master",
 		"webiny/std-lib": "dev-master",
 		"webiny/storage": "dev-master",
-		"imagine/imagine": "dev-master"
+		"imagine/imagine": "0.6.*"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "4.1.*"
