--- a/composer.json
+++ b/composer.json
@@ -18,11 +18,11 @@
 	"minimum-stability": "dev",
 	"require": {
 		"php": ">=5.4.0",
-		"webiny/class-loader": "dev-master",
-		"webiny/config": "dev-master",
-		"webiny/event-manager": "dev-master",
-		"webiny/std-lib": "dev-master",
-		"webiny/storage": "dev-master",
+		"webiny/config": "~1.0",
+		"webiny/std-lib": "~1.0",
+		"webiny/storage": "~1.0",
+		"webiny/event-manager": "~1.0",
+		"webiny/class-loader": "~1.0",
 		"imagine/imagine": "0.6.*"
 	},
 	"require-dev": {
@@ -35,7 +35,7 @@
 	},
 	"extras": {
 		"branch-alias": {
-			"dev-master": "1.0.0-RC1"
+			"dev-master": "1.1-dev"
 		}
 	}
 }
