--- a/composer.json
+++ b/composer.json
@@ -1,42 +1,49 @@
 {
-	"name": "webiny/image",
-	"type": "library",
-	"description": "Webiny Image Component",
-	"keywords": ["image", "crop", "resize", "gd", "imagick", "gmagick"],
-	"homepage": "http://www.webiny.com/",
-	"license": "MIT",
-	"authors": [
-		{
-			"name": "Sven Al Hamad",
-			"email": "sven@webiny.com"
-		},
-		{
-			"name": "Pavel Denisjuk",
-			"email": "pavel@webiny.com"
-		}
-	],
-	"minimum-stability": "dev",
-	"require": {
-		"php": ">=5.5.9",
-		"webiny/config": "~1.1",
-		"webiny/std-lib": "~1.1",
-		"webiny/storage": "~1.1",
-		"webiny/event-manager": "~1.1",
-		"imagine/imagine": "0.6.*",
-		"ext-gd": "*"
-	},
-	"require-dev": {
-		"phpunit/phpunit": "~4",
-		"mybuilder/phpunit-accelerator": "dev-master"
-	},
-	"autoload": {
-		"psr-4": {
-			"Webiny\\Component\\Image\\": ""
-		}
-	},
-	"extras": {
-		"branch-alias": {
-			"dev-master": "1.2-dev"
-		}
-	}
+    "name": "webiny/image",
+    "type": "library",
+    "description": "Webiny Image Component",
+    "keywords": [
+        "image",
+        "crop",
+        "resize",
+        "gd",
+        "imagick",
+        "gmagick"
+    ],
+    "homepage": "http://www.webiny.com/",
+    "license": "MIT",
+    "authors": [
+        {
+            "name": "Sven Al Hamad",
+            "email": "sven@webiny.com"
+        },
+        {
+            "name": "Pavel Denisjuk",
+            "email": "pavel@webiny.com"
+        }
+    ],
+    "minimum-stability": "dev",
+    "require": {
+        "php": ">=5.5.9",
+        "webiny/config": "~1.1",
+        "webiny/std-lib": "~1.1",
+        "webiny/storage": "~1.1",
+        "webiny/event-manager": "~1.1",
+        "imagine/imagine": "0.6.*",
+        "ext-gd": "*"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "~4",
+        "mybuilder/phpunit-accelerator": "dev-master"
+    },
+    "autoload": {
+        "psr-4": {
+            "Webiny\\Component\\Image\\": ""
+        }
+    },
+    "extras": {
+        "branch-alias": {
+            "dev-master": "1.3-dev"
+        }
+    }
 }
