--- a/composer.json
+++ b/composer.json
@@ -24,16 +24,16 @@
     ],
     "minimum-stability": "dev",
     "require": {
-        "php": ">=5.5.9",
-        "webiny/config": "~1.4",
-        "webiny/std-lib": "~1.4",
-        "webiny/storage": "~1.4",
-        "webiny/event-manager": "~1.4",
+        "php": "^7",
+        "webiny/config": "~1.5",
+        "webiny/std-lib": "~1.5",
+        "webiny/storage": "~1.5",
+        "webiny/event-manager": "~1.5",
         "imagine/imagine": "0.6.*",
         "ext-gd": "*"
     },
     "require-dev": {
-        "phpunit/phpunit": "~4",
+        "phpunit/phpunit": "~6",
         "mybuilder/phpunit-accelerator": "dev-master"
     },
     "autoload": {
@@ -43,7 +43,7 @@
     },
     "extras": {
         "branch-alias": {
-            "dev-master": "1.4-dev"
+            "dev-master": "1.5-dev"
         }
     }
 }
